--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = data/cneuromod
 	url = /lustre03/project/6003287/datasets/cneuromod
 	datalad-id = 29e74738-8e09-11ea-80eb-8555360247cd
+[submodule "data/movie10"]
+	path = data/movie10
+	url = /lustre03/project/6003287/datasets/cneuromod/movie10
+	datalad-id = 74df9898-c9bb-11e9-85f3-3ea8d101da1a
