--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@
 -e .
 
 # external requirements
-click
 Sphinx
 coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+# project-specific requirements
+
+numpy
+nibabel
+nilearn
+brainiak
